--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,12 @@
-certifi==2021.10.8
-charset-normalizer==2.0.9
-click==8.0.3
-colorama==0.4.4
 DateTime==4.3
 Flask==2.0.2
-idna==3.3
-imbalanced-learn==0.8.1
-itsdangerous==2.0.1
 Jinja2==3.0.3
-joblib==1.1.0
-MarkupSafe==2.0.1
 numpy==1.21.5
-pytz==2021.3
 requests==2.26.0
 scikit-learn==1.0.1
 scipy==1.7.3
-threadpoolctl==3.0.0
-urllib3==1.26.7
-Werkzeug==2.0.2
-zope.interface==5.4.0
 gunicorn==19.3.0
+pymongo
+pymongo
+pandas
+statistics
